# chromavec

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  api.html  colour-gradients.html  conf.py  environment.yml  genindex.html  index.html  intro.html  objects.inv  references.html  search.html  searchindex.js  vector-order-statistics.html
_sources/: colour-gradients.rst.txt
cmake/: SetupSphinx.cmake
docs/: api.rst  conf.py  index.rst  intro.rst  references.rst  vector-order-statistics.rst
include/chromavec/: chromavec.h  version.h.in
src/: CMakeLists.txt
src/chromavec/: CMakeLists.txt  chromavec.cpp  constants.h  version.cpp
src/chromavec/filters/: canny-edges.h  minimum-vector-dispersion.cpp  minimum-vector-dispersion.h  vector-range.cpp  vector-range.h  vmf.cpp  vmf.h
src/chromavec/utilities/: filter.h  functions.h  rgbvector.h  roi.cpp  roi.h
src/test/: CMakeLists.txt  edge-image.cpp
